--- a/learnpage/chat/index.html
+++ b/learnpage/chat/index.html
@@ -7,20 +7,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
   <div class="container-md">
     <p><a href="kelaskaryabersama.netlify.app/learnpage">&lt; Back</a></p>
     <a class="navbar-brand" href="#">cloud chat</a>
   </div>
 </nav>
-    <div class="card">
+    <p class="d-inline-flex gap-1">
+  <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    info
+  </a>
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card card-body">
+    <p>you have to agree <a href="#">terms and services</a></p>
+  </div>
+</div>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>warning!</strong> this chat is not end to-end encrypted.
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+    <div class="card border-info mb-3">
   <div class="card-body">
-    Hi! welcome to cloud chat. this is where you could chat with your clasmate
-<div class="card-footer text-body-secondary">
+    Hi! welcome to cloud chat. this is where you could chat with your classmate
+<div class="card-footer bg-transparent border-info">
     automatic message by <code>github</code> system
   </div>
 </div>
-    <nav class="navbar sticky-bottom bg-body-tertiary">
+    <nav class="navbar sticky-bottom bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid">
     <form class="d-flex" role="search">
       <input class="form-control" type="text" placeholder="type message here..." aria-label="default input example">
