--- a/learnpage/chat/index.html
+++ b/learnpage/chat/index.html
@@ -34,6 +34,20 @@
     automatic message by <code>github</code> system
   </div>
 </div>
+      <img src="https://avatars.githubusercontent.com/u/140678641?s=400&u=d0501bd273b309068f775a896b437e68cf380b27&v=4" class="rounded-circle float-end" style="width: 50px;"
+  alt="Avatar" />
+      <div class="card text-bg-success mb-3">
+  <div class="card-body">
+    wiih bagus banget chatnya! hehehe
+  </div>
+</div>
+           <img src="https://teams.microsoft.com/api/mt/part/apac-02/beta/users/8:orgid:e7499033-f2c2-4191-9a4e-00400c1de981/profilepicturev2?displayname=Celestinus%20Milan%20Lizriadi%20(L)&size=HR96x96" class="rounded-circle float-start" style="width: 50px;"
+  alt="Avatar" />
+      <div class="card text-bg-success mb-3">
+  <div class="card-body">
+  bagus banget alkiva, aku aja gabisa bikin ☹️
+  </div>
+</div>
     <nav class="navbar sticky-bottom bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid">
     <form class="d-flex" role="search">
