--- a/learnpage/chat/index.html
+++ b/learnpage/chat/index.html
@@ -34,6 +34,7 @@
     automatic message by <code>github</code> system
   </div>
 </div>
+    </div>
       <img src="https://avatars.githubusercontent.com/u/140678641?s=400&u=d0501bd273b309068f775a896b437e68cf380b27&v=4" class="rounded-circle float-end" style="width: 50px;"
   alt="Avatar" />
       <div class="card text-bg-success mb-3">
