--- a/learnpage/chat/index.html
+++ b/learnpage/chat/index.html
@@ -49,6 +49,27 @@
   bagus banget alkiva, aku aja gabisa bikin ☹️
   </div>
 </div>
+               <img src="marvelgg.jpg" class="rounded-circle float-start" style="width: 50px;"
+  alt="marvelgg" />
+      <div class="card text-bg-secondary mb-3">
+  <div class="card-body">
+  itu kodingannya dimana? aku mau coba juga 😅
+  </div>
+</div>
+      <img src="https://avatars.githubusercontent.com/u/140678641?s=400&u=d0501bd273b309068f775a896b437e68cf380b27&v=4" class="rounded-circle float-end" style="width: 50px;"
+  alt="Avatar" />
+      <div class="card text-bg-success mb-3">
+  <div class="card-body">
+    <p>di <a href="https://github.com/alkiva117/kelaskaryabersama.com/learnpage/chat/index.html">https://github.com/alkiva117/kelaskaryabersama.com/learnpage/chat/index.html</a></p>
+  </div>
+</div>
+                   <img src="arkaan.jpg" class="rounded-circle float-start" style="width: 50px;"
+  alt="arkaan" />
+      <div class="card text-bg-secondary mb-3">
+  <div class="card-body">
+  kirain pake VScode
+  </div>
+</div>
     <nav class="navbar sticky-bottom bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid">
     <form class="d-flex" role="search">
