--- a/learnpage/chat/index.html
+++ b/learnpage/chat/index.html
@@ -70,6 +70,27 @@
   kirain pake VScode
   </div>
 </div>
+                       <img src="GA.jpg" class="rounded-circle float-start" style="width: 50px;"
+  alt="GA" />
+      <div class="card text-bg-secondary mb-3">
+  <div class="card-body">
+  wiih keren
+  </div>
+</div>
+      <img src="https://avatars.githubusercontent.com/u/140678641?s=400&u=d0501bd273b309068f775a896b437e68cf380b27&v=4" class="rounded-circle float-end" style="width: 50px;"
+  alt="Avatar" />
+      <div class="card text-bg-success mb-3">
+  <div class="card-body">
+    aku kan memang pro
+  </div>
+</div> 
+          <img src="https://avatars.githubusercontent.com/u/140678641?s=400&u=d0501bd273b309068f775a896b437e68cf380b27&v=4" class="rounded-circle float-end" style="width: 50px;"
+  alt="Avatar" />
+      <div class="card text-bg-success mb-3">
+  <div class="card-body">
+   kalau kalian webnya gimana?
+  </div>
+</div>
     <nav class="navbar sticky-bottom bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid">
     <form class="d-flex" role="search">
