--- a/learnpage/chat/index.html
+++ b/learnpage/chat/index.html
@@ -7,20 +7,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-  <div class="container-md">
-    <p><a href="https://kelaskaryabersama.netlify.app/learnpage">&lt; Back</a></p>
-    <a class="navbar-brand" href="#">cloud chat</a>
-  </div>
-</nav>
-    <p class="d-inline-flex gap-1">
+     <li class="nav-item">
+          <a class="nav-link" href="/learnpage"> &lt;- go back</a>
+        </li>
+<nav class="navbar" style="background-color: #e3f2fd;">
+<a class="navbar-brand" href="/learnpage/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-check" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M10.354 6.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+  <path d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383zm.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z"/>
+</svg> cloud chat</a>
+</nav>    <p class="d-inline-flex gap-1">
   <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
     info
   </a>
 </p>
 <div class="collapse" id="collapseExample">
   <div class="card card-body">
-    <p>you have to agree <a href="#">terms and services</a></p>
+    <p>you have to agree <a href="#">terms and conditions</a></p>
   </div>
 </div>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
