--- a/learnpage/index.html
+++ b/learnpage/index.html
@@ -9,14 +9,14 @@
   <body>
     <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="https://kelaskaryabersama.netlify.app/">kelaskaryabersama</a>
+    <a class="navbar-brand" href="/#">kelaskaryabersama</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="https://kelaskaryabersama.netlify.app/">Home</a>
+          <a class="nav-link active" aria-current="page" href="/#">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Learn</a>
